# include_proc_macro

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/actions/: init_crate_workflow.yml
.github/actions/cache_cargo/: .gitignore  action.yml
.github/actions/cache_cargo/src/: README.md  cache_dirs.js  package-lock.json  package.json
.github/actions/init_crate_workflow/: action.yml
.github/actions/install_rust/: action.yml
.github/workflows/: crate_audit.yml  crate_ci.yml  crate_tests.yml  main.yml  main_branch_updated.yml  pr.yml  release.yml
examples/: Cargo.toml
examples/src/: attr_impl.rs  derive_impl.rs  derive_impl_with_attrs.rs  derive_multiple_attrs.rs  existing_mod.rs  foo.rs  lib.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
macro_test/: Cargo.toml  hello.rs
macro_test/src/: foo.rs  lib.rs
macro_test/test/: inner.rs
macro_test/test/subdir/: subdir.rs
src/: lib.rs
tests/: literal.rs
tests/subdir/: another_literal.rs  foo.rs
