[package]
name = "include_proc_macro"
authors = ["orgrinrt", "Hiisi Digital"]
version = "1.0.6"
edition = "2021"
description = """
A simple shorthand for including proc-macro source files in the module tree for external tooling like IDEs or other similar purposes.
"""
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["procedural-macros", "proc-macro", "helper", "dev", "shorthand"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/include_proc_macro"
homepage = "https://github.com/orgrinrt/include_proc_macro"
repository = "https://github.com/orgrinrt/include_proc_macro"


[dependencies]


[clippy]
# Enable all lints that are on by default
default-features = true
# Enable additional lints
# (replace `+` with `-` to disable specific lints)
extra-plugins = [
    "clippy::pedantic",
    "clippy::cargo",
    "+clippy::nursery",
    "+clippy::style",
    "+clippy::complexity",
    "+clippy::perf",
    "+clippy::correctness",
    "+clippy::suspicious",
    "+clippy::deprecated"
]
