[package]
name = "include_proc_macro"
authors = ["orgrinrt", "Hiisi Digital"]
version = "2.0.0"
edition = "2021"
description = """
A convenient macro for working with multiple procedural macros in one crate, and to import them from any arbitrary paths. Reduces boilerplate and repetition, and improves readability.
"""
license-file = "LICENSE"
readme = "README.md"
keywords = ["procedural-macros", "proc-macro", "derive", "attribute-macros", "macro-helpers"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/include_proc_macro"
homepage = "https://github.com/orgrinrt/include_proc_macro"
repository = "https://github.com/orgrinrt/include_proc_macro"

[workspace]
members = [
    "macro_test",
    "integration_test"
]

[dependencies]

[clippy]
default-features = true
extra-plugins = [
    "clippy::pedantic",
    "clippy::cargo",
    "+clippy::nursery",
    "+clippy::style",
    "+clippy::complexity",
    "+clippy::perf",
    "+clippy::correctness",
    "+clippy::suspicious",
    "+clippy::deprecated"
]
